# darwin-relay

./: .gitignore  Cargo.toml  README.md  SPEC-v2.md  foundry.toml
asm/: atomic_deposit_note.masm  atomic_deposit_note_v2.masm  atomic_deposit_note_v2_015.masm  atomic_deposit_note_v3.masm  atomic_redeem_note.masm  bridge_out_v1.masm  confidential_deposit_note.masm  confidential_redeem_note.masm  network_redeem_note.masm
asm/lib/: math.masm
contracts/: DarwinRelayDeposit.sol
contracts/script/: DeployRelay.s.sol
contracts/test/: DarwinRelayDeposit.t.sol  MockUSDC.sol
docs/: BALI.md
observability/: README.md  grafana-dashboard.json  prometheus.scrape.yml
results/: stress-low-1779091675.tsv  stress-low-1779091714.tsv  stress-scale-1779835339.tsv
scripts/: backup-state.sh  oneclick_e2e.sh  stress_summarize.py  stress_test.sh  v2_worker_full.sh
src/: lib.rs  runtime.rs  service.rs  state.rs  store.rs
src/bridge/: mock.rs  mod.rs
src/eth/: alloy_impl.rs  mock.rs  mod.rs
src/miden/: live.rs  mock.rs  mod.rs
src/watcher/: alloy_impl.rs  mock.rs  mod.rs
state/: sepolia.toml
