[package]
name = "darwin-relay"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Darwin Relay service: watches DarwinRelayDeposit.sol on ETH, bridges to a Miden operator account, mints private basket positions, mints wrapped ERC20 back to the user."
repository = "https://github.com/darwin-miden/darwin-relay"

[dependencies]
anyhow      = "1"
async-trait = "0.1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
tokio       = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Persistence — version aligned with miden-client-sqlite-store 0.14
# so the optional `miden-live` feature can be enabled without dep
# conflicts on libsqlite3-sys.
rusqlite    = { version = "0.37", features = ["bundled"] }

# Ethereum side
alloy       = { version = "1", features = ["full", "providers", "sol-types", "transports", "json-rpc", "contract", "rpc-types-eth", "signer-local", "network", "pubsub", "provider-ws"] }
futures     = "0.3"
hex         = "0.4"

# Miden side (optional for the demo build — gated until we wire it)
[dependencies.miden-client]
version  = "0.14"
features = ["tonic"]
optional = true

[dependencies.miden-client-sqlite-store]
version  = "0.14"
optional = true

[dependencies.miden-protocol]
version  = "0.14"
optional = true

# AggLayer B2AGG note format. Published as `miden-agglayer` on crates.io
# but aliased locally as `miden-base-agglayer` so it groups with the
# miden-base-* deps + matches the import name the gateway-fm reference
# code uses. Powers the v2 worker's canonical Bali outbound (replaces
# the legacy bridge_out_v1 mock format Brian's testnet bridge uses).
[dependencies.miden-base-agglayer]
package  = "miden-agglayer"
version  = "=0.14.4"
optional = true

[features]
default = []
# Real Miden-client integration. Off by default so the deposit FSM
# + MockBridge tests stay fast and self-contained.
miden-live = [
    "dep:miden-client",
    "dep:miden-client-sqlite-store",
    "dep:miden-protocol",
    "dep:miden-tx",
]
# v2 relay binary (Miden-side custodial wallet + 1Click listener).
# Separate feature so the v1 binary keeps building without the new
# HTTP server / 1Click client deps.
v2 = [
    "dep:axum",
    "dep:uuid",
    "dep:reqwest",
]
# Worker that drives the on-chain atomic_deposit_note submission for
# v2-credited intents. Brings in the full miden-client + assembler
# stack — heaviest feature, separate so the lighter v2 binary stays
# quick to build.
v2-worker = [
    "v2",
    "miden-live",
    "dep:miden-assembly",
    "dep:miden-core-lib",
    "dep:miden-objects",
    "dep:miden-standards",
    "dep:miden-base-agglayer",
    "dep:rand",
]

[dependencies.miden-tx]
version  = "0.14"
optional = true

[dependencies.miden-assembly]
version  = "0.22"
optional = true

[dependencies.miden-core-lib]
version  = "0.22"
optional = true

[dependencies.miden-objects]
version  = "0.12"
optional = true

[dependencies.miden-standards]
version  = "0.14"
optional = true

[dependencies.rand]
version  = "0.8"
optional = true

[dependencies.axum]
version = "0.7"
optional = true

[dependencies.uuid]
version  = "1"
features = ["v4", "serde"]
optional = true

[dependencies.reqwest]
version          = "0.12"
default-features = false
features         = ["json", "rustls-tls"]
optional         = true

[[bin]]
name = "darwin_relay_service"
path = "src/bin/darwin_relay_service.rs"

[[bin]]
name              = "darwin_relay_v2"
path              = "src/bin/darwin_relay_v2.rs"
required-features = ["v2"]

[[bin]]
name              = "darwin_relay_v2_worker"
path              = "src/bin/darwin_relay_v2_worker.rs"
required-features = ["v2-worker"]

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
