[package]
name = "darwin-relay"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Darwin Relay v2: custodial Miden-side wallet that bridges ETH-via-1Click deposits into the v6 controller and runs the on-chain accumulating slot-10 ledger."
repository = "https://github.com/darwin-miden/darwin-relay"

[dependencies]
anyhow      = "1"
async-trait = "0.1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
tokio       = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Persistence — version aligned with miden-client-sqlite-store 0.14
# so the optional `miden-live` feature can be enabled without dep
# conflicts on libsqlite3-sys.
rusqlite    = { version = "0.37", features = ["bundled"] }

# Ethereum side
alloy       = { version = "1", features = ["full", "providers", "sol-types", "transports", "json-rpc", "contract", "rpc-types-eth", "signer-local", "network", "pubsub", "provider-ws"] }
futures     = "0.3"
hex         = "0.4"

# Miden side (optional for the demo build — gated until we wire it).
# Bumped to the v0.15 line on 2026-06-19 alongside Devnet v0.15 going
# live. miden-objects + miden-base stayed on 0.12 upstream.
[dependencies.miden-client]
version  = "0.15"
features = ["tonic"]
optional = true

[dependencies.miden-client-sqlite-store]
version  = "0.15"
optional = true

[dependencies.miden-protocol]
version  = "0.15"
optional = true

# AggLayer B2AGG note format. Published as `miden-agglayer` on crates.io
# but aliased locally as `miden-base-agglayer` so it groups with the
# miden-base-* deps + matches the import name the gateway-fm reference
# code uses. Powers the v2 worker's canonical Bali outbound (replaces
# the legacy bridge_out_v1 mock format Brian's testnet bridge uses).
[dependencies.miden-base-agglayer]
package  = "miden-agglayer"
version  = "=0.15.3"
optional = true

[features]
default = []
# Real Miden-client integration. Pulled in by v2-worker; kept as a
# distinct feature so future read-only tooling can opt into the client
# without dragging in the full v2 server stack.
miden-live = [
    "dep:miden-client",
    "dep:miden-client-sqlite-store",
    "dep:miden-protocol",
    "dep:miden-tx",
]
# v2 relay binary (Miden-side custodial wallet + 1Click listener).
# HTTP + 1Click client deps are gated so a future minimal binary can
# opt out of axum/reqwest.
v2 = [
    "dep:axum",
    "dep:uuid",
    "dep:reqwest",
    "dep:tower-http",
]
# Worker that drives the on-chain atomic_deposit_note submission for
# v2-credited intents. Brings in the full miden-client + assembler
# stack — heaviest feature, separate so the lighter v2 binary stays
# quick to build.
v2-worker = [
    "v2",
    "miden-live",
    "dep:miden-assembly",
    "dep:miden-core-lib",
    "dep:miden-objects",
    "dep:miden-standards",
    "dep:miden-base-agglayer",
    "dep:rand",
]

[dependencies.miden-tx]
version  = "0.15"
optional = true

[dependencies.miden-assembly]
version  = "0.23"
optional = true

[dependencies.miden-core-lib]
version  = "0.23"
optional = true

[dependencies.miden-objects]
version  = "0.12"
optional = true

[dependencies.miden-standards]
version  = "0.15"
optional = true

[dependencies.rand]
version  = "0.8"
optional = true

[dependencies.axum]
version = "0.7"
optional = true

# CORS layer so the frontend (localhost:3010 / darwin.xyz) can call
# the relay REST from the browser. axum 0.7 → tower-http 0.6 (both
# on http 1.x).
[dependencies.tower-http]
version  = "0.6"
features = ["cors"]
optional = true

[dependencies.uuid]
version  = "1"
features = ["v4", "serde"]
optional = true

[dependencies.reqwest]
version          = "0.12"
default-features = false
features         = ["json", "rustls-tls"]
optional         = true

[[bin]]
name              = "darwin_relay_v2"
path              = "src/bin/darwin_relay_v2.rs"
required-features = ["v2"]

[[bin]]
name              = "darwin_relay_v2_worker"
path              = "src/bin/darwin_relay_v2_worker.rs"
required-features = ["v2-worker"]

# CLI test harness for the Miden-native deposit path (the same shape
# the frontend MidenDepositPanel exercises in the browser). Reuses the
# v2-worker feature set since it needs the full miden-client +
# assembler stack to compile the v2 MASM in-process.
[[bin]]
name              = "miden_native_deposit_test"
path              = "src/bin/miden_native_deposit_test.rs"
required-features = ["v2-worker"]

